--- a/package.json
+++ b/package.json
@@ -1,17 +1,14 @@
 {
-  "name": "recaptcha-server",
+  "name": "recaptcha-backend",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "script.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "start": "node script.js"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
   "dependencies": {
-    "axios": "^1.9.0",
-    "express": "^5.1.0"
-  },
-  "description": ""
+    "body-parser": "^1.20.2",
+    "cors": "^2.8.5",
+    "express": "^4.18.2",
+    "node-fetch": "^2.6.12"
+  }
 }
